--- a/resources/sass/_reset.scss
+++ b/resources/sass/_reset.scss
@@ -81,6 +81,7 @@ mark,
 audio,
 video {
     border: 0;
+    letter-spacing: normal;
     margin: 0;
     padding: 0;
     vertical-align: baseline;
