--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -252,10 +252,10 @@ html #header .header-container {
 
 .mf__nav-item {
   background-color: transparent;
-  border-radius: 4px;
+  border-radius: 50px;
   color: #4d5877 !important;
   font-size: 2rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   text-decoration: none;
   font-family: Jomolhari, serif;
   font-weight: 700;
@@ -332,6 +332,7 @@ html #header .header-container {
 
 .mf__homepage-video__heading-2 {
   font-size: 6.1rem;
+  font-weight: 100;
   margin-bottom: 4rem;
 }
 
@@ -343,12 +344,13 @@ html #header .header-container {
 
 .mf__homepage-video__heading-3 {
   background-color: rgba(77, 88, 119, 0.9) !important;
-  border-radius: 4px;
+  border-radius: 50px;
   color: #ffffff !important;
   font-size: 2rem;
-  padding: 2rem;
+  padding: 1rem 2rem;
   text-decoration: none;
   font-family: Jomolhari, serif;
+  font-size: 1.8rem;
   font-weight: 700;
 }
 
@@ -582,10 +584,10 @@ html #header .header-container {
 
 .mf__register__buttons__button {
   background-color: #ffffff;
-  border-radius: 4px;
+  border-radius: 50px;
   color: #4d5877;
   font-size: 1.8rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   text-decoration: none;
   transition: all 200ms ease-in-out;
   align-self: flex-end;
