--- a/resources/sass/frontend.scss
+++ b/resources/sass/frontend.scss
@@ -3,6 +3,10 @@
 @import '_variables';
 @import '_mixins';
 
+* {
+    font-family: $font-family-roboto;
+}
+
 h1,
 h2,
 h3,
@@ -36,6 +40,7 @@ html {
     }
 
     #header .header-container {
+        height: auto !important;
         padding: $padding/2 $padding;
     }
 }
@@ -46,6 +51,11 @@ html {
 }
 
 .#{$mf} {
+    &#{$es}section {
+        padding-top: $padding*4;
+        padding-bottom: $padding*4;
+    }
+
     &#{$es}heading-3 {
         font-size: 3rem;
     }
@@ -64,9 +74,15 @@ html {
 
     &#{$es}nav {
         align-items: center;
+        justify-content: flex-end;
         padding: $padding;
 
         &-item {
+            &-con {
+                padding-top: $padding;
+                padding-bottom: $padding;
+            }
+
             @include button-styles(
                 $color: var(--purple) !important
             );
@@ -96,24 +112,36 @@ html {
         }
     }
 
-    &#{$es}logo-con {
+    /* &#{$es}logo-con {
         max-width: 350px;
         width: 350px !important;
-    }
+    } */
     
-    &#{$es}logo {
+    &#{$es}logo-inner {
         @include ratio( logo );
+        @include transition;
         
         background: url( '/frontend/template/assets/img/MF-Homecare-Logo.png' ) no-repeat center center;
         background-size: contain;
         display: block;
-        max-width: 350px;
         width: 350px;
+
+        @include for-phone-only {
+            width: 300px;
+        }
+
+        @include for-desktop-375-down {
+            width: 225px;
+        }
 
         .sticky-header-active & {
             background-image: url( '/frontend/template/assets/img/MF-Homecare-Logo-white.png' );
         }
     }
+
+    /* &#{$es}logo {
+        width: 100%;
+    } */
 
     &#{$es}homepage-video {
         &:before {
@@ -215,13 +243,9 @@ html {
         &#{$ms}benefits {
             background-color: var(--cream);
             margin-bottom: $margin*2;
-            padding-top: $padding*2;
-            padding-bottom: $padding*2;
         }
         
-        &#{$ms}services {
-            padding-bottom: $padding*2;
-        }
+        &#{$ms}services {}
 
         &#{$es}feature {
             @include display-flex(
@@ -283,8 +307,6 @@ html {
 
     &#{$es}video {
         background-color: var(--cream);
-        padding-top: $padding*2;
-        padding-bottom: $padding*2;
 
         &#{$es}video {
             display: block;
@@ -296,8 +318,6 @@ html {
     &#{$es}register__buttons {
         background-color: var(--purple);
         color: var(--white);
-        padding-top: $padding*2;
-        padding-bottom: $padding*2;
 
         &#{$es}inner {
             @include display-flex(
@@ -315,10 +335,20 @@ html {
 
             &:last-child {
                 padding-right: 0;
+                padding-bottom: 0;
+            }
+
+            @include for-tablet-landscape-down {
+                flex-basis: 100%;
+                height: auto;
+                padding-right: 0;
+                padding-bottom: $padding*4;
             }
         }
 
         .mf__heading-3 {
+            @include line-height;
+            
             color: var(--white);
             margin-bottom: $margin*2;
         }
